// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render a blue button 1`] = `
<button
  class="btn bg-blue text-white"
>
  
  Knapp
  
</button>
`;

exports[`Button should render a button 1`] = `
<button
  class="btn"
>
  
  Knapp
  
</button>
`;

exports[`Button should render an a tag 1`] = `
<a
  class="btn"
  href="https://www.mullvad.net"
>
  
  Mullvad
  
</a>
`;
